--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "jquery": "^3.4.1",
+    "mdbreact": "^4.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-js-pagination": "^3.0.2",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
